--- a/css/app.css
+++ b/css/app.css
@@ -21,7 +21,7 @@ body {
   -ms-flex-line-pack: center;
       align-content: center;
   background-color: #37474f;
-  color: #b8c6cd;
+  color: #7c96a3;
 }
 
 #app header > * {
