--- a/src/app.scss
+++ b/src/app.scss
@@ -32,6 +32,10 @@ $header-bg:#37474f;
         &>* {
             align-self: center;
         }
+        blockquote{
+            border-left: 3px solid skyblue;
+            padding-left: 2em;
+        }
     }
     footer{
         grid-area: footer;
@@ -41,6 +45,10 @@ $header-bg:#37474f;
         &>*{
             align-self: center;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        a{
+            color: inherit;
+            text-decoration: none;
         }
     }
 }
